# Conways-Game-Of-Life

./: .gitignore  CMakeLists.txt  README.md
include/: const.h  graphics.h  lifeforms.h  lifekernel.h  test.h
src/: glad.c  graphics.cpp  lifeforms.cpp  lifekernel.cu  main.cpp  test.cpp  test.cu
